<resources>
    <string name="app_name">Tippy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="desired_tip">Tip Percent</string>
    <string name="tip_help">Trouble choosing?</string>
    <string name="bill_placeholder">9.99</string>
    <string name="percent_placeholder">10</string>
    <string name="bill_err">Please enter bill</string>
    <string name="percent_err">Please enter %</string>
    <string name="sign_percent">%</string>
    <string name="sign_dollar">$</string>
    <string name="change_currency">Change Currency</string>
    <string name="generate">\'Tippy\' Me!</string>
    <string name="SIGN_KEY">SIGN</string>
    <string name="PERS_KEY">PERS</string>
    <string name="num_people">People Paying</string>
    <string name="tipcardcost">Bill:</string>
    <string name="tipcardtip">Tip:</string>
    <string name="tipcardtotal">Total:</string>
    <string name="tipcardnumpeople">With %1$d people</string>
    <string name="tipcardtipperperson">Tip per person:</string>
    <string name="tipcardtotalperperson">Total per person:</string>
    <string name="total_amt">Total:</string>
    <string name="tip_rating_1">Poor Service</string>
    <string name="tip_rating_2">Below Average Service</string>
    <string name="tip_rating_3">Good Service</string>
    <string name="tip_rating_4">Excellent Service</string>
    <string name="tip_rating_5">Over the \'Tippy\' Top</string>
    <string-array name="number_of_people">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="title_activity_popup">PopupActivity</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="suggest_tip_confirm">Suggest a \'Tippy\'!</string>
    <string name="suggest_tip_popover_text">Please rate your experience, so that Tippy! can suggest a tip</string>
</resources>
