<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeActivityFragment"
    tools:showIn="@layout/activity_home">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bill_amount"
            android:id="@+id/textBill"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sign_dollar"
            android:id="@+id/textDollarHint"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editPercent"
            android:layout_alignParentStart="true"
            android:hint="@string/bill_placeholder"
            android:layout_below="@+id/textPercent"
            android:layout_alignParentLeft="true"
            android:layout_row="0"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/desired_tip"
            android:id="@+id/textPercent"
            android:layout_below="@+id/editBill"
            android:layout_alignParentStart="true"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sign_percent"
            android:id="@+id/textPercentHint"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editBill"
            android:layout_below="@+id/textBill"
            android:hint="@string/percent_placeholder"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/gridLayout"
            android:layout_row="1"
            android:layout_column="2" />

        <TextView
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tip_help"
            android:id="@+id/textHelpChoose"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="right"
            android:textColor="@color/tippy_purple"
            android:textIsSelectable="false"
            android:clickable="true"
            android:onClick="getTipRating" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:id="@+id/btnGenerate"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:background="@color/tippy_purple"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:onClick="generateTip"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/tippyValue"
            android:layout_row="4"
            android:layout_column="0" />

    </GridLayout>
</RelativeLayout>
