<android.support.v7.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context="in.tedmor.www.tippy.TipCard"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:id="@+id/tippyCard"
android:layout_row="0"
android:layout_columnSpan="3"
android:layout_column="0"
android:layout_marginTop="@dimen/activity_horizontal_margin">

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:useDefaultMargins="true"
    android:paddingLeft="@dimen/card_padding"
    android:paddingRight="@dimen/card_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="15%"
        android:id="@+id/displayPercentage"
        android:layout_row="0"
        android:layout_column="0"
        android:textSize="@dimen/tip_size"
        android:textColor="@color/tippy_purple"
        android:layout_gravity="center_vertical" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displayStars"
        android:layout_row="0"
        android:layout_column="1"
        android:numStars="@integer/tip_rating"
        android:layout_gravity="center_horizontal|right"
        android:layout_columnSpan="3"
        android:rating="3"
        android:stepSize="1"
        android:isIndicator="true"
        android:progressTint="@color/yppit_yellow"
        android:progressBackgroundTint="@color/yppit_yellow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tipcardcost"
        android:id="@+id/textTotalBill"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="$3.14"
        android:id="@+id/displayCost"
        android:layout_row="1"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="$1.00"
        android:id="@+id/displayTip"
        android:layout_row="1"
        android:layout_column="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total_amt"
        android:id="@+id/textView2"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="$4.14"
        android:id="@+id/displayTotal"
        android:layout_row="2"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tipcardnumpeople"
        android:id="@+id/textNumPeople"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        android:textColor="@color/tippy_purple" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tipcardtipperperson"
        android:id="@+id/textTipPP"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="$1.00"
        android:id="@+id/displayTipPerPerson"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tipcardtotalperperson"
        android:id="@+id/textTotalPP"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="$1.00"
        android:id="@+id/displayTotalPerPerson"
        android:layout_row="5"
        android:layout_column="2"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tippyValue"
        android:layout_row="6"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tipcardtip"
        android:id="@+id/textTip"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_gravity="right" />

</GridLayout>
</android.support.v7.widget.CardView>
